--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@ body {
 
 <!-- MUSIC -->
 <audio autoplay loop>
-  <source src="LastChristmas.mp3" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/RedsHyper/christmas-card-2.0/main/LastChristmas.mp3" type="audio/mpeg">
 </audio>
 
 </body>
 
 </html>
+
